bug/regression fix
fix directive split RegExp

fix error page layout, regression: f51db63, v0.7.0

1. set body's font-size instead of html's
   setting html's affacts footer's 1rem size, which cause it to be larger
   design intention is to mimic 9px/12px font-size

2. reset article's min-width to initial
   error page's font-size is large, setting min-width mostly overflows x-axis
   design intention is to 70ch width under normal font-size

--- a/stylus/error-page.styl
+++ b/stylus/error-page.styl
@@ -20,6 +20,7 @@ body
 
 article
     text-align: center
+    min-width: initial !important
     h2
         margin 1em auto
     p
@@ -30,13 +31,12 @@ article
         text-decoration: none
 
 @media screen and (min-width: $px-tablet)
-    html
+    body
         font-size: 133%
 
 @media screen and (min-width: $px-desktop)
-    html
-        font-size: 167%
     body
+        font-size: 167%
         .main
             margin-right: 0
             flex-grow: initial
